--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Mulish&display=swap");
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+body {
+  font-family: "Mulish", sans-serif;
+  background-color: #f5d894;
+  overflow-x: hidden;
+}
+.offcanvas{
+  width: 450px !important;
+}
